[gd_scene load_steps=5 format=3 uid="uid://l1unmoqd7ua4"]

[ext_resource type="Script" path="res://Characters/Enemies/Walker/walker.gd" id="1_s1a7d"]
[ext_resource type="Script" path="res://StateMachine/FiniteStateMachine.gd" id="2_go1tl"]
[ext_resource type="Script" path="res://Characters/Enemies/Walker/WalkerStates/WalkingState.gd" id="4_8ialj"]
[ext_resource type="Script" path="res://Characters/Enemies/Walker/WalkerStates/HidingState.gd" id="5_hvfok"]

[node name="Walker" type="CharacterBody2D"]
script = ExtResource("1_s1a7d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
animation = &"Hide"

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("2_go1tl")
state = NodePath("WalkingState")

[node name="WalkingState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("4_8ialj")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="HidingState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("5_hvfok")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)

[node name="DownwardRaycast" type="RayCast2D" parent="."]
position = Vector2(-2, 4)

[node name="LookForPlayerRaycast" type="RayCast2D" parent="."]
position = Vector2(0, 4)
collision_mask = 2
